# scagent

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
apps/web/src/components/chat/: AdvancedActionsDrawer.tsx  BondIndicator.tsx  BondNotification.tsx  BondStatusDisplay.tsx  BranchHistoryView.tsx  CGUnlockModal.tsx  CharacterEventTimeline.tsx  CharacterGalleryModal.tsx  CharacterPortraitPanel.tsx  CharacterTuneModal.tsx  ChatBranchVisualization.tsx  ChatControlBar.tsx  ChatDynamicImageSystem.tsx  ChatEmptyState.tsx  ChatEntryWizard.tsx  ChatErrorState.tsx  ChatHeader.tsx  ChatInterface.tsx  ChatList.tsx  ChatNodeEditor.tsx  ChatOfflineState.tsx  ChatSettingsPanel.tsx  CreativeDirectivePanel.tsx  CreativePresetBar.tsx  CreativeTemplatePanel.tsx  CreativeTemplateSelector.tsx  DirectorPanel.tsx  EMOTION_ATMOSPHERE_INTEGRATION.md  EMOTION_ATMOSPHERE_QUICKSTART.md  EMOTION_ATMOSPHERE_README.md  EmotionAtmosphere.tsx  EmotionAtmosphereDemo.tsx  EmotionBadge.tsx  EnhancedMessageBubble.tsx  ExpGainFloater.tsx  FirstChatSettingsDialog.tsx  GroupMemberSelector.tsx  GroupMessageRenderer.tsx  ImmersiveMessageBubble.tsx  ImmersiveMessageEnhancements.tsx  (+33 more)
apps/web/src/components/chat/__tests__/: EmotionAtmosphere.test.tsx
apps/web/src/components/chat/utils/: animations.ts  emotionColors.ts  index.ts  theaterColors.ts
apps/web/src/components/chat/v2/: CGReveal.tsx  CharacterPortraitPanel.v2.tsx  CharacterPortraitPanel.v3.tsx  CharacterPortraitPanel.v4.tsx  ContextAwareQuickActions.README.md  ContextAwareQuickActions.example.tsx  ContextAwareQuickActions.tsx  CreativeDirectivePills.tsx  DynamicBackground.tsx  EmotionTransitionBadge.tsx  FloatingRelationCard.tsx  ImmersiveChatV2Container.tsx  ImmersiveMessageBubble.v2.tsx  ImmersiveStatusBar.tsx  MessageContextMenu.example.tsx  MessageContextMenu.tsx  MessageInput.v2.tsx  MiniInputBar.tsx  (+6 more)
shencha_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  agent.py  knowledge.py  llm_client.py  reporters.py
(+15 files in other folders)
